# todos_app

./: pyproject.toml
app/: main.py
app/config/: db.py
app/models/: todos.py
